maxplan/londex/Metric-FF/scan-ops_pddl.output
Terminals which are not used

   IMPLIES_TOK
   PLUS_TOK
   DIV_TOK
   MUL_TOK
   UMINUS


State 196 conflicts: 1 shift/reduce
State 207 conflicts: 1 reduce/reduce
State 472 conflicts: 4 shift/reduce
State 474 conflicts: 3 shift/reduce
State 476 conflicts: 3 shift/reduce
State 478 conflicts: 3 shift/reduce
State 482 conflicts: 1 shift/reduce
State 484 conflicts: 1 shift/reduce
State 486 conflicts: 1 shift/reduce
State 488 conflicts: 1 shift/reduce
State 490 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 @1: /* empty */

    2 file: @1 domain_definition

    3 @2: /* empty */

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name @2 optional_domain_defs

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME CLOSE_PAREN

    6 optional_domain_defs: CLOSE_PAREN
    7                     | require_def optional_domain_defs
    8                     | constants_def optional_domain_defs
    9                     | types_def optional_domain_defs
   10                     | predicates_def optional_domain_defs
   11                     | functions_def optional_domain_defs
   12                     | action_def optional_domain_defs
   13                     | durative_action_def optional_domain_defs
   14                     | derived_def optional_domain_defs
   15                     | constraints_def optional_domain_defs

   16 @3: /* empty */

   17 predicates_def: OPEN_PAREN PREDICATES_TOK predicates_list @3 CLOSE_PAREN

   18 predicates_list: /* empty */

   19 @4: /* empty */

   20 predicates_list: OPEN_PAREN NAME typed_list_variable CLOSE_PAREN @4 predicates_list

   21 @5: /* empty */

   22 functions_def: OPEN_PAREN FUNCTIONS_TOK functions_list @5 CLOSE_PAREN

   23 functions_list: /* empty */

   24 @6: /* empty */

   25 functions_list: OPEN_PAREN NAME typed_list_variable CLOSE_PAREN @6 functions_list

   26 @7: /* empty */

   27 @8: /* empty */

   28 require_def: OPEN_PAREN REQUIREMENTS_TOK @7 NAME @8 require_key_star CLOSE_PAREN

   29 @9: /* empty */

   30 require_def: OPEN_PAREN REQUIREMENTS_TOK @9 CONSTRAINTS_TOK require_key_star CLOSE_PAREN

   31 require_key_star: /* empty */

   32 @10: /* empty */

   33 require_key_star: NAME @10 require_key_star
   34                 | CONSTRAINTS_TOK require_key_star

   35 @11: /* empty */

   36 types_def: OPEN_PAREN TYPES_TOK @11 typed_list_name CLOSE_PAREN

   37 @12: /* empty */

   38 constants_def: OPEN_PAREN CONSTANTS_TOK @12 typed_list_name CLOSE_PAREN

   39 @13: /* empty */

   40 constraints_def: OPEN_PAREN CONSTRAINTS_TOK @13 con_GD CLOSE_PAREN

   41 con_GD: con_GD1
   42       | OPEN_PAREN dis_AND_TOK con_GD_star CLOSE_PAREN

   43 @14: /* empty */

   44 con_GD: OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable @14 CLOSE_PAREN con_GD CLOSE_PAREN

   45 con_GD1: OPEN_PAREN AT_END adl_goal_description CLOSE_PAREN
   46        | OPEN_PAREN ALWAYS_TOK adl_goal_description CLOSE_PAREN
   47        | OPEN_PAREN SOMETIME_TOK adl_goal_description CLOSE_PAREN
   48        | OPEN_PAREN WITHIN_TOK NUM adl_goal_description CLOSE_PAREN
   49        | OPEN_PAREN AT_MOST_ONCE_TOK adl_goal_description CLOSE_PAREN
   50        | OPEN_PAREN SOMETIME_AFTER_TOK adl_goal_description adl_goal_description CLOSE_PAREN
   51        | OPEN_PAREN SOMETIME_BEFORE_TOK adl_goal_description adl_goal_description CLOSE_PAREN
   52        | OPEN_PAREN ALWAYS_WITHIN_TOK NUM adl_goal_description adl_goal_description CLOSE_PAREN
   53        | OPEN_PAREN HOLD_DURING_TOK NUM NUM adl_goal_description CLOSE_PAREN
   54        | OPEN_PAREN HOLD_AFTER_TOK NUM adl_goal_description CLOSE_PAREN

   55 con_GD_star: /* empty */
   56            | con_GD con_GD_star

   57 @15: /* empty */

   58 @16: /* empty */

   59 action_def: OPEN_PAREN ACTION_TOK @15 NAME @16 param_def action_def_body CLOSE_PAREN

   60 param_def: /* empty */
   61          | PARAMETERS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN

   62 action_def_body: /* empty */
   63                | VARS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN action_def_body

   64 @17: /* empty */

   65 action_def_body: PRECONDITION_TOK pre_GD @17 action_def_body

   66 @18: /* empty */

   67 action_def_body: EFFECT_TOK adl_effect @18 action_def_body

   68 pre_GD: OPEN_PAREN CLOSE_PAREN
   69       | pref_GD
   70       | OPEN_PAREN dis_AND_TOK pre_GD_star CLOSE_PAREN
   71       | OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN pre_GD CLOSE_PAREN

   72 pre_GD_star: /* empty */
   73            | pre_GD pre_GD_star

   74 pref_GD: OPEN_PAREN PREFERENCE_TOK NAME adl_goal_description CLOSE_PAREN
   75        | OPEN_PAREN PREFERENCE_TOK adl_goal_description CLOSE_PAREN
   76        | adl_goal_description1

   77 derived_def: OPEN_PAREN DERIVED_TOK OPEN_PAREN predicate typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN

   78 adl_goal_description: adl_goal_description1
   79                     | OPEN_PAREN dis_AND_TOK adl_goal_description_star CLOSE_PAREN
   80                     | OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_goal_description1 CLOSE_PAREN

   81 adl_goal_description1: OPEN_PAREN LE_TOK f_exp f_exp CLOSE_PAREN
   82                      | OPEN_PAREN LEQ_TOK f_exp f_exp CLOSE_PAREN
   83                      | OPEN_PAREN EQ_TOK f_exp f_exp CLOSE_PAREN
   84                      | OPEN_PAREN GEQ_TOK f_exp f_exp CLOSE_PAREN
   85                      | OPEN_PAREN GE_TOK f_exp f_exp CLOSE_PAREN
   86                      | literal_term
   87                      | OPEN_PAREN dis_OR_TOK adl_goal_description_star CLOSE_PAREN
   88                      | OPEN_PAREN dis_NOT_TOK adl_goal_description CLOSE_PAREN
   89                      | OPEN_PAREN IMPLY_TOK adl_goal_description adl_goal_description CLOSE_PAREN
   90                      | OPEN_PAREN dis_EXISTS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN

   91 adl_goal_description_star: /* empty */
   92                          | adl_goal_description adl_goal_description_star

   93 adl_effect: OPEN_PAREN ASSIGN_TOK f_head f_exp CLOSE_PAREN
   94           | OPEN_PAREN SCALE_UP_TOK f_head f_exp CLOSE_PAREN
   95           | OPEN_PAREN SCALE_DOWN_TOK f_head f_exp CLOSE_PAREN
   96           | OPEN_PAREN INCREASE_TOK f_head f_exp CLOSE_PAREN
   97           | OPEN_PAREN DECREASE_TOK f_head f_exp CLOSE_PAREN
   98           | literal_term
   99           | OPEN_PAREN dis_AND_TOK adl_effect_star CLOSE_PAREN
  100           | OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_effect CLOSE_PAREN
  101           | OPEN_PAREN dis_WHEN_TOK adl_goal_description adl_effect CLOSE_PAREN

  102 adl_effect_star: /* empty */
  103                | adl_effect adl_effect_star

  104 f_head: OPEN_PAREN NAME term_star CLOSE_PAREN
  105       | NAME

  106 f_exp: NUM
  107      | f_head
  108      | OPEN_PAREN MINUS_TOK f_exp CLOSE_PAREN
  109      | OPEN_PAREN AD_TOK f_exp f_exp CLOSE_PAREN
  110      | OPEN_PAREN MINUS_TOK f_exp f_exp CLOSE_PAREN
  111      | OPEN_PAREN MU_TOK f_exp f_exp CLOSE_PAREN
  112      | OPEN_PAREN DI_TOK f_exp f_exp CLOSE_PAREN

  113 literal_term: OPEN_PAREN dis_NOT_TOK atomic_formula_term CLOSE_PAREN
  114             | atomic_formula_term

  115 atomic_formula_term: OPEN_PAREN predicate term_star CLOSE_PAREN
  116                    | OPEN_PAREN EQ_TOK term_star CLOSE_PAREN

  117 term_star: /* empty */
  118          | term term_star

  119 term: NAME
  120     | VARIABLE

  121 name_plus: NAME
  122          | NAME name_plus

  123 predicate: NAME

  124 typed_list_name: /* empty */
  125                | NAME EITHER_TOK name_plus CLOSE_PAREN typed_list_name
  126                | NAME MINUS_TOK NAME typed_list_name
  127                | NAME typed_list_name

  128 typed_list_variable: /* empty */
  129                    | VARIABLE EITHER_TOK name_plus CLOSE_PAREN typed_list_variable
  130                    | VARIABLE MINUS_TOK NAME typed_list_variable
  131                    | VARIABLE typed_list_variable

  132 @19: /* empty */

  133 @20: /* empty */

  134 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK @19 NAME @20 param_def durative_action_def_body CLOSE_PAREN

  135 @21: /* empty */

  136 @22: /* empty */

  137 durative_action_def_body: DURATION_TOK duration_constraint @21 CONDITION_TOK da_GD @22 EFFECT_TOK da_adl_effect

  138 da_GD: OPEN_PAREN CLOSE_PAREN
  139      | pref_timed_GD
  140      | OPEN_PAREN dis_AND_TOK da_GD_star CLOSE_PAREN
  141      | OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN da_GD CLOSE_PAREN

  142 da_GD_star: /* empty */
  143           | da_GD da_GD_star

  144 pref_timed_GD: OPEN_PAREN PREFERENCE_TOK NAME da_adl_goal_description CLOSE_PAREN
  145              | OPEN_PAREN PREFERENCE_TOK da_adl_goal_description CLOSE_PAREN
  146              | timed_adl_goal_description

  147 da_adl_goal_description: timed_adl_goal_description
  148                        | OPEN_PAREN dis_AND_TOK timed_adl_goal_description_plus CLOSE_PAREN

  149 timed_adl_goal_description_plus: timed_adl_goal_description
  150                                | timed_adl_goal_description timed_adl_goal_description_plus

  151 timed_adl_goal_description: OPEN_PAREN AT_START adl_goal_description CLOSE_PAREN
  152                           | OPEN_PAREN AT_END adl_goal_description CLOSE_PAREN
  153                           | OPEN_PAREN OVER_ALL adl_goal_description CLOSE_PAREN

  154 duration_constraint: OPEN_PAREN EQ_TOK DURATION_VAR_TOK f_exp CLOSE_PAREN

  155 da_adl_effect: OPEN_PAREN CLOSE_PAREN
  156              | OPEN_PAREN dis_AND_TOK timed_adl_effect_plus CLOSE_PAREN
  157              | timed_adl_effect
  158              | OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN da_adl_effect CLOSE_PAREN
  159              | OPEN_PAREN dis_WHEN_TOK da_adl_goal_description timed_adl_effect CLOSE_PAREN
  160              | OPEN_PAREN ASSIGN_TOK f_head f_exp_da CLOSE_PAREN
  161              | OPEN_PAREN SCALE_UP_TOK f_head f_exp_da CLOSE_PAREN
  162              | OPEN_PAREN SCALE_DOWN_TOK f_head f_exp_da CLOSE_PAREN
  163              | OPEN_PAREN INCREASE_TOK f_head f_exp_da CLOSE_PAREN
  164              | OPEN_PAREN DECREASE_TOK f_head f_exp_da CLOSE_PAREN

  165 timed_adl_effect_plus: timed_adl_effect
  166                      | timed_adl_effect timed_adl_effect_plus

  167 timed_adl_effect: OPEN_PAREN AT_START adl_effect CLOSE_PAREN
  168                 | OPEN_PAREN AT_END adl_effect CLOSE_PAREN
  169                 | OPEN_PAREN AT_START f_assign_da CLOSE_PAREN
  170                 | OPEN_PAREN AT_END f_assign_da CLOSE_PAREN
  171                 | OPEN_PAREN INCREASE_TOK f_head f_exp_t CLOSE_PAREN
  172                 | OPEN_PAREN DECREASE_TOK f_head f_exp_t CLOSE_PAREN

  173 f_assign_da: OPEN_PAREN ASSIGN_TOK f_head f_exp_da CLOSE_PAREN
  174            | OPEN_PAREN SCALE_UP_TOK f_head f_exp_da CLOSE_PAREN
  175            | OPEN_PAREN SCALE_DOWN_TOK f_head f_exp_da CLOSE_PAREN
  176            | OPEN_PAREN INCREASE_TOK f_head f_exp_da CLOSE_PAREN
  177            | OPEN_PAREN DECREASE_TOK f_head f_exp_da CLOSE_PAREN

  178 f_exp_da: OPEN_PAREN AD_TOK f_exp_da f_exp_da CLOSE_PAREN
  179         | OPEN_PAREN MINUS_TOK f_exp_da f_exp_da CLOSE_PAREN
  180         | OPEN_PAREN MU_TOK f_exp_da f_exp_da CLOSE_PAREN
  181         | OPEN_PAREN DI_TOK f_exp_da f_exp_da CLOSE_PAREN
  182         | OPEN_PAREN MINUS_TOK f_exp_da CLOSE_PAREN
  183         | DURATION_VAR_TOK
  184         | f_exp

  185 f_exp_t: OPEN_PAREN '*' f_exp TIME_TOK CLOSE_PAREN
  186        | OPEN_PAREN '*' TIME_TOK f_exp CLOSE_PAREN
  187        | TIME_TOK


Terminals, with rules where they appear

$end (0) 0
'*' (42) 185 186
error (256)
DEFINE_TOK (258) 4
DOMAIN_TOK (259) 5
REQUIREMENTS_TOK (260) 28 30
TYPES_TOK (261) 36
EITHER_TOK (262) 125 129
CONSTANTS_TOK (263) 38
PREDICATES_TOK (264) 17
FUNCTIONS_TOK (265) 22
ACTION_TOK (266) 59
VARS_TOK (267) 63
IMPLIES_TOK (268)
PRECONDITION_TOK (269) 65
PARAMETERS_TOK (270) 61
EFFECT_TOK (271) 67 137
dis_AND_TOK (272) 42 70 79 99 140 148 156
dis_NOT_TOK (273) 88 113
dis_WHEN_TOK (274) 101 159
Fdis_ORdis_ALL_TOK (275) 44 71 80 100 141 158
IMPLY_TOK (276) 89
dis_OR_TOK (277) 87
dis_EXISTS_TOK (278) 90
LE_TOK (279) 81
LEQ_TOK (280) 82
EQ_TOK (281) 83 116 154
GEQ_TOK (282) 84
GE_TOK (283) 85
MINUS_TOK (284) 108 110 126 130 179 182
AD_TOK (285) 109 178
MU_TOK (286) 111 180
DI_TOK (287) 112 181
ASSIGN_TOK (288) 93 160 173
SCALE_UP_TOK (289) 94 161 174
SCALE_DOWN_TOK (290) 95 162 175
INCREASE_TOK (291) 96 163 171 176
DECREASE_TOK (292) 97 164 172 177
NAME (293) 5 20 25 28 33 59 74 104 105 119 121 122 123 125 126 127
    130 134 144
VARIABLE (294) 120 129 130 131
NUM (295) 48 52 53 54 106
OPEN_PAREN (296) 4 5 17 20 22 25 28 30 36 38 40 42 44 45 46 47 48 49
    50 51 52 53 54 59 61 63 68 70 71 74 75 77 79 80 81 82 83 84 85
    87 88 89 90 93 94 95 96 97 99 100 101 104 108 109 110 111 112 113
    115 116 134 138 140 141 144 145 148 151 152 153 154 155 156 158
    159 160 161 162 163 164 167 168 169 170 171 172 173 174 175 176
    177 178 179 180 181 182 185 186
CLOSE_PAREN (297) 5 6 17 20 22 25 28 30 36 38 40 42 44 45 46 47 48
    49 50 51 52 53 54 59 61 63 68 70 71 74 75 77 79 80 81 82 83 84
    85 87 88 89 90 93 94 95 96 97 99 100 101 104 108 109 110 111 112
    113 115 116 125 129 134 138 140 141 144 145 148 151 152 153 154
    155 156 158 159 160 161 162 163 164 167 168 169 170 171 172 173
    174 175 176 177 178 179 180 181 182 185 186
CONSTRAINTS_TOK (298) 30 34 40
PREFERENCE_TOK (299) 74 75 144 145
WITHIN_TOK (300) 48
SOMETIME_TOK (301) 47
ALWAYS_TOK (302) 46
AT_MOST_ONCE_TOK (303) 49
SOMETIME_AFTER_TOK (304) 50
SOMETIME_BEFORE_TOK (305) 51
ALWAYS_WITHIN_TOK (306) 52
HOLD_DURING_TOK (307) 53
HOLD_AFTER_TOK (308) 54
DERIVED_TOK (309) 77
AT_START (310) 151 167 169
AT_END (311) 45 152 168 170
OVER_ALL (312) 153
DURATION_TOK (313) 137
DURATIVE_ACTION_TOK (314) 134
DURATION_VAR_TOK (315) 154 183
CONDITION_TOK (316) 137
TIME_TOK (317) 185 186 187
PLUS_TOK (318)
DIV_TOK (319)
MUL_TOK (320)
UMINUS (321)


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
file (69)
    on left: 2, on right: 0
@1 (70)
    on left: 1, on right: 2
domain_definition (71)
    on left: 4, on right: 2
@2 (72)
    on left: 3, on right: 4
domain_name (73)
    on left: 5, on right: 4
optional_domain_defs (74)
    on left: 6 7 8 9 10 11 12 13 14 15, on right: 4 7 8 9 10 11 12
    13 14 15
predicates_def (75)
    on left: 17, on right: 10
@3 (76)
    on left: 16, on right: 17
predicates_list (77)
    on left: 18 20, on right: 17 20
@4 (78)
    on left: 19, on right: 20
functions_def (79)
    on left: 22, on right: 11
@5 (80)
    on left: 21, on right: 22
functions_list (81)
    on left: 23 25, on right: 22 25
@6 (82)
    on left: 24, on right: 25
require_def (83)
    on left: 28 30, on right: 7
@7 (84)
    on left: 26, on right: 28
@8 (85)
    on left: 27, on right: 28
@9 (86)
    on left: 29, on right: 30
require_key_star (87)
    on left: 31 33 34, on right: 28 30 33 34
@10 (88)
    on left: 32, on right: 33
types_def (89)
    on left: 36, on right: 9
@11 (90)
    on left: 35, on right: 36
constants_def (91)
    on left: 38, on right: 8
@12 (92)
    on left: 37, on right: 38
constraints_def (93)
    on left: 40, on right: 15
@13 (94)
    on left: 39, on right: 40
con_GD (95)
    on left: 41 42 44, on right: 40 44 56
@14 (96)
    on left: 43, on right: 44
con_GD1 (97)
    on left: 45 46 47 48 49 50 51 52 53 54, on right: 41
con_GD_star (98)
    on left: 55 56, on right: 42 56
action_def (99)
    on left: 59, on right: 12
@15 (100)
    on left: 57, on right: 59
@16 (101)
    on left: 58, on right: 59
param_def (102)
    on left: 60 61, on right: 59 134
action_def_body (103)
    on left: 62 63 65 67, on right: 59 63 65 67
@17 (104)
    on left: 64, on right: 65
@18 (105)
    on left: 66, on right: 67
pre_GD (106)
    on left: 68 69 70 71, on right: 65 71 73
pre_GD_star (107)
    on left: 72 73, on right: 70 73
pref_GD (108)
    on left: 74 75 76, on right: 69
derived_def (109)
    on left: 77, on right: 14
adl_goal_description (110)
    on left: 78 79 80, on right: 45 46 47 48 49 50 51 52 53 54 74 75
    77 88 89 90 92 101 151 152 153
adl_goal_description1 (111)
    on left: 81 82 83 84 85 86 87 88 89 90, on right: 76 78 80
adl_goal_description_star (112)
    on left: 91 92, on right: 79 87 92
adl_effect (113)
    on left: 93 94 95 96 97 98 99 100 101, on right: 67 100 101 103
    167 168
adl_effect_star (114)
    on left: 102 103, on right: 99 103
f_head (115)
    on left: 104 105, on right: 93 94 95 96 97 107 160 161 162 163
    164 171 172 173 174 175 176 177
f_exp (116)
    on left: 106 107 108 109 110 111 112, on right: 81 82 83 84 85
    93 94 95 96 97 108 109 110 111 112 154 184 185 186
literal_term (117)
    on left: 113 114, on right: 86 98
atomic_formula_term (118)
    on left: 115 116, on right: 113 114
term_star (119)
    on left: 117 118, on right: 104 115 116 118
term (120)
    on left: 119 120, on right: 118
name_plus (121)
    on left: 121 122, on right: 122 125 129
predicate (122)
    on left: 123, on right: 77 115
typed_list_name (123)
    on left: 124 125 126 127, on right: 36 38 125 126 127
typed_list_variable (124)
    on left: 128 129 130 131, on right: 20 25 44 61 63 71 77 80 90
    100 129 130 131 141 158
durative_action_def (125)
    on left: 134, on right: 13
@19 (126)
    on left: 132, on right: 134
@20 (127)
    on left: 133, on right: 134
durative_action_def_body (128)
    on left: 137, on right: 134
@21 (129)
    on left: 135, on right: 137
@22 (130)
    on left: 136, on right: 137
da_GD (131)
    on left: 138 139 140 141, on right: 137 141 143
da_GD_star (132)
    on left: 142 143, on right: 140 143
pref_timed_GD (133)
    on left: 144 145 146, on right: 139
da_adl_goal_description (134)
    on left: 147 148, on right: 144 145 159
timed_adl_goal_description_plus (135)
    on left: 149 150, on right: 148 150
timed_adl_goal_description (136)
    on left: 151 152 153, on right: 146 147 149 150
duration_constraint (137)
    on left: 154, on right: 137
da_adl_effect (138)
    on left: 155 156 157 158 159 160 161 162 163 164,
    on right: 137 158
timed_adl_effect_plus (139)
    on left: 165 166, on right: 156 166
timed_adl_effect (140)
    on left: 167 168 169 170 171 172, on right: 157 159 165 166
f_assign_da (141)
    on left: 173 174 175 176 177, on right: 169 170
f_exp_da (142)
    on left: 178 179 180 181 182 183 184, on right: 160 161 162 163
    164 173 174 175 176 177 178 179 180 181 182
f_exp_t (143)
    on left: 185 186 187, on right: 171 172


state 0

    0 $accept: . file $end

    $default  reduce using rule 1 (@1)

    file  go to state 1
    @1    go to state 2


state 1

    0 $accept: file . $end

    $end  shift, and go to state 3


state 2

    2 file: @1 . domain_definition

    OPEN_PAREN  shift, and go to state 4

    domain_definition  go to state 5


state 3

    0 $accept: file $end .

    $default  accept


state 4

    4 domain_definition: OPEN_PAREN . DEFINE_TOK domain_name @2 optional_domain_defs

    DEFINE_TOK  shift, and go to state 6


state 5

    2 file: @1 domain_definition .

    $default  reduce using rule 2 (file)


state 6

    4 domain_definition: OPEN_PAREN DEFINE_TOK . domain_name @2 optional_domain_defs

    OPEN_PAREN  shift, and go to state 7

    domain_name  go to state 8


state 7

    5 domain_name: OPEN_PAREN . DOMAIN_TOK NAME CLOSE_PAREN

    DOMAIN_TOK  shift, and go to state 9


state 8

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name . @2 optional_domain_defs

    $default  reduce using rule 3 (@2)

    @2  go to state 10


state 9

    5 domain_name: OPEN_PAREN DOMAIN_TOK . NAME CLOSE_PAREN

    NAME  shift, and go to state 11


state 10

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name @2 . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 14
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    constraints_def       go to state 20
    action_def            go to state 21
    derived_def           go to state 22
    durative_action_def   go to state 23


state 11

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 24


state 12

   17 predicates_def: OPEN_PAREN . PREDICATES_TOK predicates_list @3 CLOSE_PAREN
   22 functions_def: OPEN_PAREN . FUNCTIONS_TOK functions_list @5 CLOSE_PAREN
   28 require_def: OPEN_PAREN . REQUIREMENTS_TOK @7 NAME @8 require_key_star CLOSE_PAREN
   30            | OPEN_PAREN . REQUIREMENTS_TOK @9 CONSTRAINTS_TOK require_key_star CLOSE_PAREN
   36 types_def: OPEN_PAREN . TYPES_TOK @11 typed_list_name CLOSE_PAREN
   38 constants_def: OPEN_PAREN . CONSTANTS_TOK @12 typed_list_name CLOSE_PAREN
   40 constraints_def: OPEN_PAREN . CONSTRAINTS_TOK @13 con_GD CLOSE_PAREN
   59 action_def: OPEN_PAREN . ACTION_TOK @15 NAME @16 param_def action_def_body CLOSE_PAREN
   77 derived_def: OPEN_PAREN . DERIVED_TOK OPEN_PAREN predicate typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN
  134 durative_action_def: OPEN_PAREN . DURATIVE_ACTION_TOK @19 NAME @20 param_def durative_action_def_body CLOSE_PAREN

    REQUIREMENTS_TOK     shift, and go to state 25
    TYPES_TOK            shift, and go to state 26
    CONSTANTS_TOK        shift, and go to state 27
    PREDICATES_TOK       shift, and go to state 28
    FUNCTIONS_TOK        shift, and go to state 29
    ACTION_TOK           shift, and go to state 30
    CONSTRAINTS_TOK      shift, and go to state 31
    DERIVED_TOK          shift, and go to state 32
    DURATIVE_ACTION_TOK  shift, and go to state 33


state 13

    6 optional_domain_defs: CLOSE_PAREN .

    $default  reduce using rule 6 (optional_domain_defs)


state 14

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name @2 optional_domain_defs .

    $default  reduce using rule 4 (domain_definition)


state 15

   10 optional_domain_defs: predicates_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 34
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    constraints_def       go to state 20
    action_def            go to state 21
    derived_def           go to state 22
    durative_action_def   go to state 23


state 16

   11 optional_domain_defs: functions_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 35
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    constraints_def       go to state 20
    action_def            go to state 21
    derived_def           go to state 22
    durative_action_def   go to state 23


state 17

    7 optional_domain_defs: require_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 36
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    constraints_def       go to state 20
    action_def            go to state 21
    derived_def           go to state 22
    durative_action_def   go to state 23


state 18

    9 optional_domain_defs: types_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 37
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    constraints_def       go to state 20
    action_def            go to state 21
    derived_def           go to state 22
    durative_action_def   go to state 23


state 19

    8 optional_domain_defs: constants_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 38
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    constraints_def       go to state 20
    action_def            go to state 21
    derived_def           go to state 22
    durative_action_def   go to state 23


state 20

   15 optional_domain_defs: constraints_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 39
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    constraints_def       go to state 20
    action_def            go to state 21
    derived_def           go to state 22
    durative_action_def   go to state 23


state 21

   12 optional_domain_defs: action_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 40
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    constraints_def       go to state 20
    action_def            go to state 21
    derived_def           go to state 22
    durative_action_def   go to state 23


state 22

   14 optional_domain_defs: derived_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 41
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    constraints_def       go to state 20
    action_def            go to state 21
    derived_def           go to state 22
    durative_action_def   go to state 23


state 23

   13 optional_domain_defs: durative_action_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 42
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    constraints_def       go to state 20
    action_def            go to state 21
    derived_def           go to state 22
    durative_action_def   go to state 23


state 24

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME CLOSE_PAREN .

    $default  reduce using rule 5 (domain_name)


state 25

   28 require_def: OPEN_PAREN REQUIREMENTS_TOK . @7 NAME @8 require_key_star CLOSE_PAREN
   30            | OPEN_PAREN REQUIREMENTS_TOK . @9 CONSTRAINTS_TOK require_key_star CLOSE_PAREN

    CONSTRAINTS_TOK  reduce using rule 29 (@9)
    $default         reduce using rule 26 (@7)

    @7  go to state 43
    @9  go to state 44


state 26

   36 types_def: OPEN_PAREN TYPES_TOK . @11 typed_list_name CLOSE_PAREN

    $default  reduce using rule 35 (@11)

    @11  go to state 45


state 27

   38 constants_def: OPEN_PAREN CONSTANTS_TOK . @12 typed_list_name CLOSE_PAREN

    $default  reduce using rule 37 (@12)

    @12  go to state 46


state 28

   17 predicates_def: OPEN_PAREN PREDICATES_TOK . predicates_list @3 CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 47

    $default  reduce using rule 18 (predicates_list)

    predicates_list  go to state 48


state 29

   22 functions_def: OPEN_PAREN FUNCTIONS_TOK . functions_list @5 CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 49

    $default  reduce using rule 23 (functions_list)

    functions_list  go to state 50


state 30

   59 action_def: OPEN_PAREN ACTION_TOK . @15 NAME @16 param_def action_def_body CLOSE_PAREN

    $default  reduce using rule 57 (@15)

    @15  go to state 51


state 31

   40 constraints_def: OPEN_PAREN CONSTRAINTS_TOK . @13 con_GD CLOSE_PAREN

    $default  reduce using rule 39 (@13)

    @13  go to state 52


state 32

   77 derived_def: OPEN_PAREN DERIVED_TOK . OPEN_PAREN predicate typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 53


state 33

  134 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK . @19 NAME @20 param_def durative_action_def_body CLOSE_PAREN

    $default  reduce using rule 132 (@19)

    @19  go to state 54


state 34

   10 optional_domain_defs: predicates_def optional_domain_defs .

    $default  reduce using rule 10 (optional_domain_defs)


state 35

   11 optional_domain_defs: functions_def optional_domain_defs .

    $default  reduce using rule 11 (optional_domain_defs)


state 36

    7 optional_domain_defs: require_def optional_domain_defs .

    $default  reduce using rule 7 (optional_domain_defs)


state 37

    9 optional_domain_defs: types_def optional_domain_defs .

    $default  reduce using rule 9 (optional_domain_defs)


state 38

    8 optional_domain_defs: constants_def optional_domain_defs .
